--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQTfU5Pcxm+qAMa0ImkKtz",
+      "authorship_tag": "ABX9TyNATBo4rWfU+KKeIS96hmP4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2631,13 +2631,290 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Reshaping a Tensor"
+      ],
       "metadata": {
-        "id": "eBJzrxnPh-Ow"
+        "id": "NQNTDiTQi0lo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = torch.randint(size=(4,4), high=10, low=0)\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4n6HOilEmuj2",
+        "outputId": "d075c681-c7e3-4344-f5bc-771197b36c4c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 6, 8, 3],\n",
+              "        [3, 8, 2, 8],\n",
+              "        [9, 5, 1, 0],\n",
+              "        [1, 7, 8, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.reshape(2,2,2,2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uD03Ywl6mysV",
+        "outputId": "5a00316a-0bb0-41f9-c41a-69cf6f940627"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[1, 6],\n",
+              "          [8, 3]],\n",
+              "\n",
+              "         [[3, 8],\n",
+              "          [2, 8]]],\n",
+              "\n",
+              "\n",
+              "        [[[9, 5],\n",
+              "          [1, 0]],\n",
+              "\n",
+              "         [[1, 7],\n",
+              "          [8, 7]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flatten\n",
+        "a.flatten()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wICWBF26nRF8",
+        "outputId": "6eb15fc4-cb98-48ba-b2f4-699bc9e20da2"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 6, 8, 3, 3, 8, 2, 8, 9, 5, 1, 0, 1, 7, 8, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = torch.rand(2,3,4)\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RIW3hSHunghx",
+        "outputId": "16cf00d0-efb9-4bff-f859-ba0ec144467a"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.4947, 0.5316, 0.0610, 0.9412],\n",
+              "         [0.7877, 0.1188, 0.6209, 0.4896],\n",
+              "         [0.8401, 0.3176, 0.3338, 0.6721]],\n",
+              "\n",
+              "        [[0.5822, 0.9652, 0.5730, 0.7570],\n",
+              "         [0.3481, 0.9961, 0.8379, 0.6178],\n",
+              "         [0.8693, 0.4843, 0.5827, 0.5801]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# permute\n",
+        "b.permute(2,1,0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D7fkXwpln1TQ",
+        "outputId": "cfd04e07-ce96-4cce-de74-1fe987f511ac"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.4947, 0.5822],\n",
+              "         [0.7877, 0.3481],\n",
+              "         [0.8401, 0.8693]],\n",
+              "\n",
+              "        [[0.5316, 0.9652],\n",
+              "         [0.1188, 0.9961],\n",
+              "         [0.3176, 0.4843]],\n",
+              "\n",
+              "        [[0.0610, 0.5730],\n",
+              "         [0.6209, 0.8379],\n",
+              "         [0.3338, 0.5827]],\n",
+              "\n",
+              "        [[0.9412, 0.7570],\n",
+              "         [0.4896, 0.6178],\n",
+              "         [0.6721, 0.5801]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# image size dims\n",
+        "c = torch.rand(226, 226, 3)\n",
+        "c.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Jii7If-n6oM",
+        "outputId": "80acf9ff-7723-46a6-98c9-c97c57d2e876"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([226, 226, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# unsqueeze: adding a dimension for classification category.\n",
+        "c.unsqueeze(-1).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gg7ElqBOopTy",
+        "outputId": "729d504b-9308-40c8-d2f2-3ea1d0b8b990"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([226, 226, 3, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# squeeze: removing on dimensions\n",
+        "d = torch.rand(1,20, 3)\n",
+        "d.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YESjzkt_oxA8",
+        "outputId": "b1666a04-4a72-468a-9f59-c1318f40e0bd"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 20, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d.squeeze(0).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7QxRiOp3pFS7",
+        "outputId": "fb377b31-a247-43c1-d79b-337a54be9f36"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([20, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
     }
   ]
 }
