basic conversion of numpy to pytorch and vice-versa

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNATBo4rWfU+KKeIS96hmP4",
+      "authorship_tag": "ABX9TyM/JN6XWACZojrAcDOnVkRO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2913,6 +2913,185 @@
           },
           "metadata": {},
           "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## NumPy and Pytorch conversion"
+      ],
+      "metadata": {
+        "id": "0Le4DsMrpwm9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "-6enlKNuq7L6"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = torch.tensor([1,2,3])\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jxPtPXF3q82a",
+        "outputId": "8cfcb6ba-02bb-4400-cb7b-a77407dde82f"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PPKLzZ60rOuh",
+        "outputId": "d0fe40f6-5bef-4b0d-f15c-15b0637ca644"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Tensor"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a.numpy()\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2__kk082q-rs",
+        "outputId": "be1abfcb-d89f-4bf2-f5fd-c468660e274c"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QbDPSzHKrKpv",
+        "outputId": "de10dedf-deaa-4d5d-eee3-8eae338b2e1a"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.from_numpy(b)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wMLnHGBTrK92",
+        "outputId": "c6970c7d-ef00-4e9c-8119-fe5cafeef794"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YKX2xT_NrbhN",
+        "outputId": "5ff279c3-4934-4cb1-b5d8-c4b77e3cab7e"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Tensor"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
         }
       ]
     }
