make use of autograd to calc the derivative

--- a/pytorch_autograd.ipynb
+++ b/pytorch_autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiA9KwRpfUeOBuDmpeUQi1",
+      "authorship_tag": "ABX9TyN2LH+kYRwrB/KuNXe0pX5I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,6 +104,143 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " ### What is Autograd?\n",
+        "\n",
+        " Autograd is a core component of PyTorch that provides automatic differentiation for tensor operations. It enables gradient computation, which is essential for training machine learning models using optimization algorithms like gradient descent."
+      ],
+      "metadata": {
+        "id": "37zeLkALwmz1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# calculate dy/dx for any give x, with the help of autograd\n",
+        "\n",
+        "import torch"
+      ],
+      "metadata": {
+        "id": "qgHrMJhwwowl"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating a tensor with grad set to true\n",
+        "# because of this pytorch understands we want to calc derivative of it\n",
+        "x = torch.tensor(3.0, requires_grad=True)"
+      ],
+      "metadata": {
+        "id": "pVjALCTTwpYw"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = x**2"
+      ],
+      "metadata": {
+        "id": "fpT7Bt64zmSY"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YYbZ5D5ez03o",
+        "outputId": "1241c62a-f697-42e1-fbd5-f17c08544289"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(3., requires_grad=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KcyE3etiz1sp",
+        "outputId": "835e11bb-071f-4e41-bff9-f05b218a2577"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(9., grad_fn=<PowBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.backward()"
+      ],
+      "metadata": {
+        "id": "R77baaVbz2SF"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.grad"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j7il32jm0CvK",
+        "outputId": "c3f91668-f423-4b62-b655-888e3e3f4755"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6.)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     }
