add example with computation graph for nested func (derivatives)

--- a/pytorch_autograd.ipynb
+++ b/pytorch_autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2LH+kYRwrB/KuNXe0pX5I",
+      "authorship_tag": "ABX9TyPxib/kcIdP9cdaGRoBRSqS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,32 +78,32 @@
       "metadata": {
         "id": "O2kRfGwOv9mw"
       },
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dz_dx(2)"
+        "dz_dx(3)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHxvK-_YwKEZ",
-        "outputId": "dc784bf0-2f27-435a-91c1-1f6ab770d276"
+        "outputId": "6f8f0af3-4af3-4e98-8cf9-e77b0f49dcf2"
       },
-      "execution_count": 9,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-2.6145744834544478"
+              "-5.466781571308061"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 30
         }
       ]
     },
@@ -243,6 +243,127 @@
           "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = torch.tensor(3.0, requires_grad=True)"
+      ],
+      "metadata": {
+        "id": "m4LKR-tr1TjH"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a**2"
+      ],
+      "metadata": {
+        "id": "XyAxZKCN1VXX"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = torch.sin(b)"
+      ],
+      "metadata": {
+        "id": "WspLwZZ81Wy3"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have a computational graph:\n",
+        "\n",
+        "\n",
+        "![]()\n",
+        "\n",
+        "<img src=\"https://drive.google.com/uc?export=view&id=1fyPduolB7gMhF7Hv7uAeWtk6vi_Yjxux\" alt=\"Computational Graph\" width=\"80%\" height=\"60%\">\n"
+      ],
+      "metadata": {
+        "id": "QEe42Ek2107O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c.backward()"
+      ],
+      "metadata": {
+        "id": "uzXyTX7o1awI"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.grad"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "duUZQR1N1bxn",
+        "outputId": "36daee3a-39cb-4a18-8d7f-b3f958c97fb7"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(-5.4668)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we cannot calc the grad of intermediate nodes.\n",
+        "# input tensors: leaves node\n",
+        "# output tensors: root node\n",
+        "# more details here: https://docs.pytorch.org/tutorials/beginner/basics/autogradqs_tutorial.html#more-on-computational-graphs\n",
+        "b.grad"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ofKAbluQ1yj9",
+        "outputId": "ae343d6e-a0c8-49fd-8acf-54b509828bdd"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2110846228.py:2: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at /pytorch/build/aten/src/ATen/core/TensorBody.h:489.)\n",
+            "  b.grad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VtMSI4VD4-bq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
