calc manual gradient for a basic sigmoid fn

--- a/pytorch_autograd.ipynb
+++ b/pytorch_autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxib/kcIdP9cdaGRoBRSqS",
+      "authorship_tag": "ABX9TyPPi/zhjokBlPpyd1JZbmtY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -358,9 +358,132 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch\n",
+        "\n",
+        "# Inputs\n",
+        "x = torch.tensor(6.7)  # Input feature\n",
+        "y = torch.tensor(0.0)  # True label (binary)\n",
+        "\n",
+        "w = torch.tensor(1.0)  # Weight\n",
+        "b = torch.tensor(0.0)  # Bias"
+      ],
       "metadata": {
         "id": "VtMSI4VD4-bq"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Binary Cross-Entropy Loss for scalar\n",
+        "def binary_cross_entropy_loss(prediction, target):\n",
+        "    epsilon = 1e-8  # To prevent log(0)\n",
+        "    prediction = torch.clamp(prediction, epsilon, 1 - epsilon)\n",
+        "    return -(target * torch.log(prediction) + (1 - target) * torch.log(1 - prediction))"
+      ],
+      "metadata": {
+        "id": "d4dA2C148pKe"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Forward pass\n",
+        "z = w * x + b  # Weighted sum (linear part)\n",
+        "y_pred = torch.sigmoid(z)  # Predicted probability\n",
+        "\n",
+        "# Compute binary cross-entropy loss\n",
+        "loss = binary_cross_entropy_loss(y_pred, y)"
+      ],
+      "metadata": {
+        "id": "CMkGIIXB8ro8"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "86V-loup8tmX",
+        "outputId": "7c08af5c-385b-47e5-820e-ccc2ea4f4d3c"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6.7012)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Derivatives:\n",
+        "# 1. dL/d(y_pred): Loss with respect to the prediction (y_pred)\n",
+        "dloss_dy_pred = (y_pred - y)/(y_pred*(1-y_pred))\n",
+        "\n",
+        "# 2. dy_pred/dz: Prediction (y_pred) with respect to z (sigmoid derivative)\n",
+        "dy_pred_dz = y_pred * (1 - y_pred)\n",
+        "\n",
+        "# 3. dz/dw and dz/db: z with respect to w and b\n",
+        "dz_dw = x  # dz/dw = x\n",
+        "dz_db = 1  # dz/db = 1 (bias contributes directly to z)\n",
+        "\n",
+        "dL_dw = dloss_dy_pred * dy_pred_dz * dz_dw\n",
+        "dL_db = dloss_dy_pred * dy_pred_dz * dz_db"
+      ],
+      "metadata": {
+        "id": "nCPc_5rh8umm"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Manual Gradient of loss w.r.t weight (dw): {dL_dw}\")\n",
+        "print(f\"Manual Gradient of loss w.r.t bias (db): {dL_db}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JjYCZIrU8wGQ",
+        "outputId": "c8df0568-a625-4d3b-9bd4-c26d49944d3e"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Manual Gradient of loss w.r.t weight (dw): 6.691762447357178\n",
+            "Manual Gradient of loss w.r.t bias (db): 0.998770534992218\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "67bgTEju8xPp"
       },
       "execution_count": null,
       "outputs": []
