use autograd and backward func to calc gradients

--- a/pytorch_autograd.ipynb
+++ b/pytorch_autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPi/zhjokBlPpyd1JZbmtY",
+      "authorship_tag": "ABX9TyPXFqelHUsGye+dDFiZsl9v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -481,9 +481,202 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = torch.tensor(6.7)\n",
+        "y = torch.tensor(0.0)"
+      ],
       "metadata": {
         "id": "67bgTEju8xPp"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w = torch.tensor(1.0, requires_grad=True)\n",
+        "b = torch.tensor(0.0, requires_grad=True)"
+      ],
+      "metadata": {
+        "id": "jbBhc4oI9IuV"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "40qFS6Qp9Q6z",
+        "outputId": "237b7a32-8d30-41ef-9295-f0cbff4407ee"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(1., requires_grad=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "52bEA_YY9R5q",
+        "outputId": "53c44c6b-8b00-488f-ead9-9f338bfa1697"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0., requires_grad=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = w*x + b\n",
+        "z"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LAEOY5iN9STF",
+        "outputId": "db4fafce-6e29-407a-96e0-958f43b8344d"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6.7000, grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = torch.sigmoid(z)\n",
+        "y_pred"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mQtxWv5B9VC5",
+        "outputId": "fc195669-5db0-4497-a43a-4ac601e9b1b4"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.9988, grad_fn=<SigmoidBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss = binary_cross_entropy_loss(y_pred, y)\n",
+        "loss"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZNIEr1Ae9Xq5",
+        "outputId": "bddb0d7f-79d5-44e5-eb6f-de6f5028caf4"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6.7012, grad_fn=<NegBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss.backward()"
+      ],
+      "metadata": {
+        "id": "gJtCQcCf9cEd"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(w.grad)\n",
+        "print(b.grad)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "939ZHrAq9sjB",
+        "outputId": "5cbd569f-442d-4c4a-9a0c-128efe9b7b3c"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(6.6918)\n",
+            "tensor(0.9988)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aW68d2Lf9v_h"
       },
       "execution_count": null,
       "outputs": []
